top margin gap fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@
 .header{
     background-image: url("../images/developer.png"),url("../images/header_bg.png");
     background-repeat: no-repeat;
-    background-position: top left, bottom right;
+    background-position:30px, bottom right;
 }
 
 
@@ -76,7 +76,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 
 .nav-title{
